# kon

./: Cargo.toml  Dockerfile  README.md  bench.rs  build.rs
.github/: FUNDING.yml
.github/workflows/: ci.yml
libkon-sys/: arrow.h  main.cpp  main.h
src/: deserializer.rs  duckdb.rs  erlang.rs  error.rs  flatten.rs  io.rs  lib.rs  main.rs  reader.rs
src/arrow/: writer.rs
src/avro/: reader.rs  writer.rs
src/csv/: reader.rs  writer.rs
src/excel/: reader.rs
src/html/: writer.rs
src/io/: line_length_limiter.rs
src/json/: reader.rs  writer.rs
src/sql/: writer.rs
src/xml/: writer.rs
