[package]
name = "kon"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "kon"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "kon"
path = "src/main.rs"

[features]
dhat-heap = []    # if you are doing heap profiling
dhat-ad-hoc = []  # if you are doing ad hoc profiling

[dependencies]
rayon = "1.5.3"
arrow2 = {version ="0.14", features =["io_csv", "io_ipc", "compute"]}
csv = "1.1.6"
streaming-iterator = "0.1.7"
fallible-streaming-iterator = "0.1.9"
lexical-core = "0.8.5"
chrono = "0.4.22"
simdutf8 = "0.1.4"
tempfile = "3.3.0"
encoding_rs = "0.8.31"
encoding_rs_io = { git = "https://github.com/boudra/encoding_rs_io", branch = "master"}
chardetng = "0.1.17"
serde_with = "2.0.1"
serde-tuple-vec-map = "1.0.1"
serde = "1.0.145"
serde_json = {version = "1.0", features = ["raw_value"]}
pipe = "0.4.0"
memmap2 = "0.5.7"
futures = "0.3.24"
seekable_reader = "0.1.2"
indexmap = {version ="1.9.1", features =["serde"]}
thiserror = "1.0.37"
calamine = "0.19.1"
html-escape = "0.2.11"
regex = "1.7.0"
# apache-avro = { path = "/Users/moboudra/dev/avro/lang/rust/avro"}
apache-avro = { git = "https://github.com/boudra/avro", branch = "master"}
clap = { version = "4.3.0", features = ["derive"] }
# dhat = "0.3.2"

[build-dependencies]
bindgen = "0.60"
cc = {version ="1.0.73", features =["parallel"]}
